<resources>
    <string name="app_name">ParseInstagram</string>
    <string name="username">Username</string>
    <string name="Login">Login</string>
    <string name="password">Password</string>
    <string name="description">Description...</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="picture_to_be_submitted">Picture to be submitted</string>
    <string name="sign_up">Sign up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_descriptions_go_here">The descriptions go here</string>
    <string name="post_image">Post Image</string>
</resources>